# testsamples

./: Readme.md
liststore/: 0Temp.cpp  MainActions.cpp  MainWindow.cpp  MainWindow.h  liststore.pro  main.cpp  meson.build
notebook/: MainActions.cpp  MainWindow.cpp  MainWindow.h  install.sh
scintilla/: 0Temp.cpp  MainActions.cpp  main.cpp  meson.build  scintilla.pro
socket/: 0Temp.cpp  MainActions.cpp  MainWindow.cpp  MainWindow.h  main.cpp  meson.build  socket.pro
textview/: 0Temp.cpp  MainActions.cpp  MainWindow.cpp  MainWindow.h  Readme.txt  main.cpp  meson.build  textview.pro
